--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@ body {
 #foreground {
     position: absolute;
 }
+
+.information {
+    margin-top: 10px;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: 10px;
+    list-style: none;
+}
